@@ -1,0 +1,8 @@
+.mypacklist
+Apache-Test/Makefile.old
+Apache-Test/t/REPORT
+Apache-Test/t/cgi-bin/cookies.pl
+Apache-Test/t/cgi-bin/next_available_port.pl
+ModPerl-Registry/Makefile.old t/conf/perlsection.conf
+t/htdocs/perlio/test
+Makefile
