@@ -1,20 +1,8 @@
 #!/usr/bin/make -f
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
-include /usr/share/quilt/quilt.make
-
-# If set to a true value then MakeMaker's prompt function will
-# always return the default without waiting for user input.
-export PERL_MM_USE_DEFAULT=1
-
-ifndef PERL
-PERL = /usr/bin/perl
-endif
-
-TMP     =$(CURDIR)/debian/tmp
-LA2MP2  =$(CURDIR)/debian/libapache2-mod-perl2
+PKG  := $(shell dh_listpackages)
+TMP  := $(CURDIR)/debian/$(PKG)
+BUILDHOME := $(CURDIR)/debian/build
 
 # Allow disabling build optimation by setting noopt in
 # $DEB_BUILD_OPTIONS
@@ -25,12 +13,23 @@ else
         CFLAGS += -O2
 endif
 
-.PHONY: build
-build: build-stamp
+# If set to a true value then MakeMaker's prompt function will
+# always return the default without waiting for user input.
+export PERL_MM_USE_DEFAULT=1
 
-build-stamp: $(QUILT_STAMPFN)
+ifndef PERL
+PERL = /usr/bin/perl
+endif
+
+ifndef MAKE
+PERL = /usr/bin/make
+endif
+
+%:
+	dh $@
+
+override_dh_auto_configure:
 	dh_testdir
-
 	# Add commands to compile the package here
 	$(PERL) Makefile.PL \
 		INSTALLDIRS=vendor \
@@ -44,89 +43,18 @@ build-stamp: $(QUILT_STAMPFN)
 		MP_INCLUDE_DIR=/usr/include/apr-1.0
 	$(MAKE) OPTIMIZE="$(CFLAGS)" LD_RUN_PATH=""
 
-ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
+#	ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
+#	endif
+override_dh_auto_test:
 	APACHE_TEST_EXTRA_ARGS="-httpd_conf /etc/apache2/apache2.conf" LANG=C $(MAKE) test
-endif
 
-	touch $@
+override_dh_clean:
+	dh_clean
+	rm -rf t/htdocs/hooks lib/Apache WrapXS
 
-.PHONY: clean
-clean: unpatch
-	dh_testdir
-	dh_testroot
+override_dh_install:
+	dh_install
+	mv $(TMP)/usr/bin/mp2bug $(TMP)/usr/share/libapache2-mod-perl2/
+	rm -rf $(TMP)/usr/bin/
+	install -m755 debian/libapache2-mod-perl2.bug $(TMP)/usr/share/bug/libapache2-mod-perl2
 
-	dh_clean build-stamp install-stamp
-
-	# Add commands to clean up after the build process here
-
-	# unpatch modifies Makefile.PL, rendering Makefile out of date
-	if [ -f Makefile ] ; then touch Makefile && $(MAKE) realclean ; fi
-
-	dh_clean .mypacklist Apache-Test/Makefile.old Apache-Test/t/REPORT \
-		 Apache-Test/t/cgi-bin/cookies.pl \
-		 Apache-Test/t/cgi-bin/next_available_port.pl\
-		 ModPerl-Registry/Makefile.old t/conf/perlsection.conf \
-		 t/htdocs/perlio/test
-	[ ! -d t/htdocs/hooks ] || rm -r t/htdocs/hooks
-	[ ! -d lib/Apache ] || rm -r lib/Apache
-	[ ! -d WrapXS ] || rm -r WrapXS
-
-.PHONY: install
-install: install-stamp
-
-install-stamp: build-stamp
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-
-	$(MAKE) install DESTDIR=$(TMP) PREFIX=/usr
-
-	# As this is a architecture dependent package, we are not
-	# supposed to install stuff to /usr/share. MakeMaker creates
-	# the dirs, we delete them from the deb:
-	[ ! -d $(TMP)/usr/share/perl5 ] || rmdir --ignore-fail-on-non-empty --parents --verbose $(TMP)/usr/share/perl5
-
-	touch $@
-
-.PHONY: binary-indep
-# Build architecture-independent files here.
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-	dh_installexamples -i
-	dh_installdocs -i
-	dh_installchangelogs -i Changes
-	dh_install -i
-	dh_perl -i
-	dh_compress -i
-	dh_fixperms -i
-	dh_installdeb -i
-	dh_gencontrol -i
-	dh_md5sums -i
-	dh_builddeb -i
-
-.PHONY: binary-arch
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installdirs -a
-	dh_installexamples -a
-	dh_installdocs -a
-	dh_installchangelogs -a Changes
-	dh_install -a
-	mv $(LA2MP2)/usr/bin/mp2bug $(LA2MP2)/usr/share/libapache2-mod-perl2/
-	rmdir --ignore-fail-on-non-empty --parents $(LA2MP2)/usr/bin/
-	install -m755 debian/libapache2-mod-perl2.bug $(LA2MP2)/usr/share/bug/libapache2-mod-perl2
-	dh_shlibdeps -a
-	dh_strip -a
-	dh_perl -a
-	dh_compress -a
-	dh_fixperms -a
-	dh_installdeb -a
-	dh_gencontrol -a
-	dh_md5sums -a
-	dh_builddeb -a
-
-.PHONY: binary
-binary: binary-indep binary-arch
